--- a/.github/workflows/WithAuthdotnet.yml
+++ b/.github/workflows/WithAuthdotnet.yml
@@ -17,8 +17,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - run:  echo "//npm.pkg.github.com/:541de5ddba38d691765c1d1c38419e29714e5089" > .npmrc
-            echo "@MarkusXpertek:registry=https://npm.pkg.github.com/" >> .npmrc
+    - run: echo "//npm.pkg.github.com/:541de5ddba38d691765c1d1c38419e29714e5089" > .npmrc
+    - run: echo "@MarkusXpertek:registry=https://npm.pkg.github.com/" >> .npmrc
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
