--- a/AdvisorApi/nuget.config
+++ b/AdvisorApi/nuget.config
@@ -7,7 +7,7 @@
   <packageSourceCredentials>
     <github>
       <add key="Username" value="MarkusXpertek"/>
-      <add key="ClearTextPassword" value="234ee650ce669fb3af54f7bb3107c0c5ab08c0d3"/>
+      <add key="ClearTextPassword" value=""/>
     </github>
   </packageSourceCredentials>
 </configuration>
