--- a/.github/workflows/WithAuthdotnet.yml
+++ b/.github/workflows/WithAuthdotnet.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: ngpkgLogin  
-      run: echo "//npm.pkg.github.com/:${{ secrets.NugetToken  }}" > .npmrc |
+      run: echo "//npm.pkg.github.com/:${{ secrets.NugetToken  }}" > .npmrc \
            echo "@MarkusXpertek:registry=https://npm.pkg.github.com/" >> .npmrc
     - name: Restore dependencies
       run: dotnet restore
