--- a/nuget.config
+++ b/nuget.config
@@ -7,7 +7,7 @@
   <packageSourceCredentials>
     <github>
       <add key="Username" value="MarkusXpertek"/>
-      <add key="ClearTextPassword" value=""/>
+      <add key="ClearTextPassword" value="TopSec1.0Madteck"/>
     </github>
   </packageSourceCredentials>
 </configuration>
