--- a/AdvisorApi/nuget.config
+++ b/AdvisorApi/nuget.config
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <clear />
     <add key="github" value="https://nuget.pkg.github.com/MarkusXpertek/index.json" />
   </packageSources>
   <packageSourceCredentials>
     <github>
       <add key="Username" value="MarkusXpertek"/>
-      <add key="ClearTextPassword" value="TopSec1.0Madteck"/>
+      <add key="ClearTextPassword" value="4487cb3d7c5f7abd90d19125d8813be9afe5c244"/>
     </github>
   </packageSourceCredentials>
 </configuration>
