--- a/nuget.config
+++ b/nuget.config
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <clear />
     <add key="github" value="https://nuget.pkg.github.com/MarkusXpertek/index.json" />
   </packageSources>
   <packageSourceCredentials>
     <github>
-      <add key="Username" value="MarkusXpertek"/>
-      <add key="ClearTextPassword" value="TopSec1.0Madteck"/>
+      <add key="Username" value="Nuget_CustomFeedUserName"/>
+      <add key="ClearTextPassword" value="Nuget_CustomFeedPassword"/>
     </github>
   </packageSourceCredentials>
 </configuration>
