--- a/AdvisorApi/nuget.config
+++ b/AdvisorApi/nuget.config
@@ -5,8 +5,8 @@
   </packageSources>
   <packageSourceCredentials>
     <github>
-      <add key="Username" value="MarkusXpertek"/>
-      <add key="ClearTextPassword" value="4487cb3d7c5f7abd90d19125d8813be9afe5c244"/>
+      <add key="Username" value="Nuget_CustomFeedUserName"/>
+      <add key="ClearTextPassword" value="Nuget_CustomFeedPassword"/>
     </github>
   </packageSourceCredentials>
 </configuration>
