--- a/.github/workflows/dockerWorkflow.yml
+++ b/.github/workflows/dockerWorkflow.yml
@@ -32,7 +32,7 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file Dockerfile --build-arg ${{Nuget_CustomFeedUserName}} --build-arg ${{Nuget_CustomFeedPassword}} 
+            docker build . --file Dockerfile --build-arg "${{Nuget_CustomFeedUserName}}" --build-arg "${{Nuget_CustomFeedPassword}}" 
           fi
 
   # Push image to GitHub Packages.
