Changes to dockerfile

--- a/AdvisorApi/Dockerfile
+++ b/AdvisorApi/Dockerfile
@@ -1,6 +1,8 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
+
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
+
 
 WORKDIR /app
 EXPOSE 80
@@ -8,12 +10,14 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 
-ARG Nuget_CustomFeedUserName
-ARG Nuget_CustomFeedPassword
-
 WORKDIR /src
 COPY ["nuget.config", "/"]
 COPY ["AdvisorApi.csproj", "AdvisorApi/"]
+
+ARG Nuget_PasswordArg
+ENV Nuget_PasswordEnv=$Nuget_PasswordArg
+RUN echo "ARG $Nuget_PasswordArg, ENV $Nuget_PasswordEnv"
+
 RUN dotnet restore "AdvisorApi/AdvisorApi.csproj"
 COPY . .
 WORKDIR "/src/AdvisorApi"
