--- a/nuget.config
+++ b/nuget.config
@@ -5,8 +5,8 @@
   </packageSources>
   <packageSourceCredentials>
     <github>
-      <add key="Username" value="Nuget_CustomFeedUserName"/>
-      <add key="ClearTextPassword" value="Nuget_CustomFeedPassword"/>
+      <add key="Username" value="MarkusXpertek"/>
+      <add key="ClearTextPassword" value="%Nuget_PasswordEnv%"/>
     </github>
   </packageSourceCredentials>
 </configuration>
