--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s) --build-arg Nuget_PasswordArg=%${NUGET_CUSTOMFEEDPASSWORD}%
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s) --build-arg Nuget_PasswordArg=${NUGET_CUSTOMFEEDPASSWORD}
