--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -20,4 +20,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --build-arg Nuget_PasswordArg=${NUGET_CUSTOMFEEDPASSWORD} --file Dockerfile --tag my-image-name:$(date +%s) 
+      run: docker build . --build-arg Nuget_PasswordArg=${{NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s) 
