--- a/AdvisorApi/appsettings.json
+++ b/AdvisorApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AdvisorApi-327F0E2F-D485-4EF3-8304-D7C4D5707611;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=mssql;Initial Catalog=CreditDataDb;MultipleActiveResultSets=true;User ID=sa;Password=Markus@2"
   },
   "Logging": {
     "LogLevel": {
