--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -23,9 +23,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: isbang/compose-action@v0.1
         with:
-         compose-file: Docker/docker-compose.yml
+         compose-file: "./Docker/docker-compose.yml"
   
   newman:
+    needs: compose
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@master
