--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -30,10 +30,10 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - uses: isbang/compose-action@v0.1
+      - uses: actions/checkout@v2
         with:
-         compose-file: "./docker-compose.yml"
+         compose-file: ".Docker/docker-compose.yaml"
   
   newman:
     needs: compose
