--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -30,9 +30,10 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: isbang/compose-action@v0.1
       - uses: actions/checkout@v2
+      - uses: isbang/compose-action@v0.1
         with:
+         run: dir
          compose-file: "Docker/docker-compose.yml"
   
   newman:
