--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -15,12 +15,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build -t advisorapi:latest . --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s)
-
-    - uses: isbang/compose-action@v0.1
-      with:
-       run: dir
-       compose-file: "Docker/docker-compose.yml"
   
+  compose:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: advisorapi@latest
+      - uses: isbang/compose-action@v0.1
+        with:
+         run: dir
+         compose-file: "Docker/docker-compose.yml"
+
   newman:
     needs: build
     runs-on: ubuntu-latest
