--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.2'
 services:
   web:
     #image: xpertekrock5-docker.jfrog.io/xpertekacquire/creditdatawebapi:1.0.0
-    image: advisorapi:1.0.0
+    image: markusxpertek/advisorapi:latest
     environment:
     - ASPNETCORE_ENVIRONMENT=Development
     ports:
