--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: isbang/compose-action@v0.1
-      - uses: markusxpertek/advisorapi@latest
+      - uses: actions/checkout@v2
         with:
          run: dir
          compose-file: "Docker/docker-compose.yml"
