--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     - creditdatanetwork
     depends_on:
     - mssql
-    
+
   mssql:
     image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
     ports:
@@ -23,6 +23,10 @@ services:
     - MSSQL_PID=Developer
     networks:
     - creditdatanetwork
+    volumes:
+    - type: bind
+      source: ./data
+      target: /var/opt/mssql/data
 
 
 networks:
