--- a/.github/workflows/composeaction.yml
+++ b/.github/workflows/composeaction.yml
@@ -24,8 +24,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - run: docker build . -t markusxpertek/advisorapi:latest --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s)
-      - run: docker-compose up 
+      - uses: isbang/compose-action@v0.1
+        with:
+         run: docker build -t markusxpertek/advisorapi:latest --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s)
+         compose-file: "Docker/docker-compose.yml"
       
       # Runs a single command using the runners shell
       - name: Run a one-line script
