--- a/.github/workflows/composeaction.yml
+++ b/.github/workflows/composeaction.yml
@@ -24,9 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - run: docker build . -t markusxpertek/advisorapi:latest --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s) -v secrets -v logs -v data
       - uses: isbang/compose-action@v0.1
         with:
-         run: docker build -t markusxpertek/advisorapi:latest --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s)
          compose-file: "Docker/docker-compose.yml"
       
       # Runs a single command using the runners shell
