--- a/.github/workflows/composeaction.yml
+++ b/.github/workflows/composeaction.yml
@@ -25,7 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       # # Build the two required docker images into the local docker image repo from this version of the code.
-      - run: docker build -t markusxpertek/advisorapi:latest -f Docker/Dockerfile 
+      - run: docker build . -t markusxpertek/advisorapi:latest --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Docker/Dockerfile --tag my-image-name:$(date +%s)
       # # Start the quickstart instance, as it models a fully featured running CreditDataReportSesrvice environment, which is ideal for running Postman tests against.
       - run: docker-compose -f Docker/docker-compose.yml up -d
       
