--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -25,6 +25,12 @@ services:
     - creditdatanetwork
     volumes:
     - type: bind
+      source: ./data
+      target: /var/opt/mssql/data
+    - type: bind
+      source: ./log
+      target: /var/opt/mssql/log
+    - type: bind
       source: ./secrets
       target: /var/opt/mssql/secrets
 
