--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,12 +26,14 @@ services:
     volumes:
     - type: bind
       source: ./secrets
+      target: /var/opt/mssql/data
+    - type: bind
+      source: ./secrets
+      target: /var/opt/mssql/log
+    - type: bind
+      source: ./secrets
       target: /var/opt/mssql/secrets
 
 
 networks:
   creditdatanetwork:
-volumes:
-  data:
-  log:
-  secrets:
