--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -25,10 +25,10 @@ services:
     - creditdatanetwork
     volumes:
     - type: bind
-      source: ./secrets
+      source: ./sqldata
       target: /var/opt/mssql/data
     - type: bind
-      source: ./data
+      source: ./sqllog
       target: /var/opt/mssql/log
     - type: bind
       source: ./secrets
