--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       source: /Docker/data
       target: /var/opt/mssql/data
     - type: bind
-      source: AdvisorApi/Docker/log
+      source: /Docker/log
       target: /var/opt/mssql/log
     - type: bind
       source: /Docker/secrets
