--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     - SA_PASSWORD=Markus@2
     - MSSQL_PID=Developer
     networks:
-    - creditdatanetwor
+    - creditdatanetwork
     volumes:
     - type: bind
       source: ./sql
@@ -36,4 +36,4 @@ services:
 
 
 networks:
-  creditdatanetwor:
+  creditdatanetwork:
