--- a/AdvisorApi/Docker/docker-compose.yml
+++ b/AdvisorApi/Docker/docker-compose.yml
@@ -25,13 +25,13 @@ services:
     - creditdatanetwork
     volumes:
     - type: bind
-      source: ./sql
+      source: ./data
       target: /var/opt/mssql/data
     - type: bind
-      source: ./sql
+      source: ./data
       target: /var/opt/mssql/log
     - type: bind
-      source: ./sql
+      source: ./data
       target: /var/opt/mssql/secrets
 
 
