--- a/.github/workflows/composeaction.yml
+++ b/.github/workflows/composeaction.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        run: docker build . --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag $IMAGE_NAME   
 
       - name: Log into registry
         run: echo "${{secrets.NUGET_CUSTOMFEEDPASSWORD}}" | docker login docker.pkg.github.com -u MarkusXpertek --password-stdin
