--- a/.github/workflows/composeaction.yml
+++ b/.github/workflows/composeaction.yml
@@ -10,6 +10,10 @@ on:
   pull_request:
     branches: [ master ]
 
+  env:
+  # TODO: Change variable to your image's name.
+  IMAGE_NAME: image
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -47,7 +51,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag $IMAGE_NAME   
+        run: docker build . --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag $IMAGE_NAME
+      
 
       - name: Log into registry
         run: echo "${{secrets.NUGET_CUSTOMFEEDPASSWORD}}" | docker login docker.pkg.github.com -u MarkusXpertek --password-stdin
