--- a/.github/workflows/composeaction.yml
+++ b/.github/workflows/composeaction.yml
@@ -10,6 +10,9 @@ on:
   pull_request:
     branches: [ master ]
 
+  env:
+  # TODO: Change variable to your image's name.
+  IMAGE_NAME: image
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,6 +33,5 @@ jobs:
       # # Start the quickstart instance, as it models a fully featured running CreditDataReportSesrvice environment, which is ideal for running Postman tests against.
       - run: docker-compose -v
       - run: docker-compose -f Docker/docker-compose.yml up -d
-
 
 
