--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -24,4 +24,4 @@ jobs:
         - uses: matt-ball/newman-action@master
           with:
             collection: Postman/AddvisorApi.postman_collection.json
-            environment: My Workspace.postman_globals.json
+            environment: Postman/MyWorkspace.postman_globals.json
