--- a/.github/workflows/UnitTestingAction.yml
+++ b/.github/workflows/UnitTestingAction.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: mcr.microsoft.com/dotnet/core/sdk:3.1-alpine
+    runs-on: ubuntu-latest
 
     steps:
     - run: apk update
