--- a/.github/workflows/composeaction.yml
+++ b/.github/workflows/composeaction.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: markusxpertek/advisorapi
+  IMAGE_NAME: advisorapi
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
