--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -18,7 +18,7 @@ jobs:
 
   newman:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
         - uses: actions/checkout@master
         - uses: matt-ball/newman-action@master
