--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -22,4 +22,4 @@ jobs:
     steps:
         - uses: actions/checkout@master
         - run: sudo npm install -g newman
-        - run: newman run Postman/AddvisorApi.postman_collection.json -e Development.postman_environment.json
+        - run: newman run Postman/AddvisorApi.postman_collection.json -e Postman/Development.postman_environment.json
