--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -19,4 +19,4 @@ jobs:
     - run: docker-compose -v
     - run: docker-compose -f Docker/docker-compose.yml up -d
     - run: sudo npm install -g newman
-    - run: newman run Postman/AddvisorApi.postman_collection.json -e Postman/Development.postman_environment.json
+    - run: newman run Postman/AddvisorApi.postman_collection.json -e Postman/MyWorkspace.postman_globals.json
