--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -18,7 +18,5 @@ jobs:
       # # Start the quickstart instance, as it models a fully featured running CreditDataReportSesrvice environment, which is ideal for running Postman tests against.
     - run: docker-compose -v
     - run: docker-compose -f Docker/docker-compose.yml up -d
-    - uses: matt-ball/newman-action@master
-      with:
-        collection: AddvisorApi.postman_collection.json
-        environment: Development.postman_environment.json
+    - run: sudo npm install -g newman
+    - run: newman run Postman/AddvisorApi.postman_collection.json -e Postman/Development.postman_environment.json
