--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -7,10 +7,39 @@ on:
     branches: [ master ]
 
 jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build the Docker image
+      run: docker build . -t markusxpertek/advisorapi:latest --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s)
+      # # Start the quickstart instance, as it models a fully featured running CreditDataReportSesrvice environment, which is ideal for running Postman tests against.
+    - run: docker-compose -v
+    - run: docker-compose -f Docker/docker-compose.yml up -d
+    - run: sudo npm install -g newman
+    - run: newman run Postman/AddvisorApi.postman_collection.json
+
   newman:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: matt-ball/newman-action@master
+    
+    - uses: actions/checkout@v2
+    # Install Node.js environment
+    - name: set up node
+      uses: actions/setup-node@v1
       with:
-        collection: Postman/AddvisorApi.postman_collection.json
+        node-version: '12.x'
+
+    # Install newman
+    - name: Install newman
+      run: | 
+        npm install -g newman
+        npm install -g newman-reporter-htmlextra
+    - name: Build the Docker image
+      run: docker build . -t markusxpertek/advisorapi:latest --build-arg Nuget_PasswordArg=${{secrets.NUGET_CUSTOMFEEDPASSWORD}} --file Dockerfile --tag my-image-name:$(date +%s)
+    - run: docker-compose -v
+    - run: docker-compose -f Docker/docker-compose.yml up -d
+    - run: sudo npm install -g newman
+    - run: newman run Postman/AddvisorApi.postman_collection.json
