--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -11,9 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
  
-    - run: |
-      curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh 
-      bash
+    - run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
     # Install Node.js environment
     - run: |
        nvm install v10
