--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -13,7 +13,7 @@ jobs:
  
     - run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
     - run: |
-        echo 'export NVM_DIR="$HOME/.nvm"
+        echo 'export NVM_DIR="$HOME/.nvm"'
         echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"'
     # Install Node.js environment
     - run: |
