--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -18,15 +18,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-
-      - name: unit tests for Contoso Business Layer
+      - name: use this action, test solution dir
         uses: zyborg/dotnet-tests-report@v1
         with:
-          project_path: AdiserUnitTests/AdiserUnitTests
-          report_name: contoso_business_tests
-          report_title: Contos Business Tests
+          project_path: tests/AdvisorApi.Tests
+          report_name: my_project_tests
+          report_title: My Project Tests
           github_token: ${{secrets.NUGET_CUSTOMFEEDPASSWORD}}
-          gist_name: contoso_business_tests.md
-          gist_badge_label: 'Contoso Business: %Counters_passed%/%Counters_total%'
-          gist_token: ${{secrets.NUGET_CUSTOMFEEDPASSWORD}}
-
