--- a/.github/workflows/UnitTesting.yml
+++ b/.github/workflows/UnitTesting.yml
@@ -21,7 +21,7 @@ jobs:
       - name: use this action, test solution dir
         uses: zyborg/dotnet-tests-report@v1
         with:
-          project_path: AdvisorApi/AdiserUnitTests
+          project_path: AdvisorApi/AdvisorApi
           report_name: my_project_tests
           report_title: My Project Tests
           github_token: ${{secrets.NUGET_CUSTOMFEEDPASSWORD}}
